gameplay: prevent image distortion at low screen width

--- a/styles/game-gameplay.css
+++ b/styles/game-gameplay.css
@@ -39,8 +39,9 @@
 
 #img-level-image{
 	margin-top:1em;
-	height: 200px;
+	height: 8em;
 	max-width: 100%;
+	object-fit: contain;
 }
 
 /* Submission */
